--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -20,7 +20,7 @@ const lang = getLangFromUrl(Astro.url);
         Ya no necesita usar su teléfono para autenticarse. Esta extensión le brinda códigos de verificación de doble
         factor (2FA) directamente en su navegador.
       </p>
-      <div class="mt-2 flex items-center justify-center gap-4 md:mt-4">
+      <div class="mt-2 flex flex-col items-center justify-center gap-9 md:mt-4">
         <a
           href="https://chromewebstore.google.com/detail/2fa-authenticator/pnnmjhghimefjdmdilmlhnojccjgpgeh"
           class="rounded-full bg-blue-500 px-7 py-3 text-xl font-semibold uppercase text-white transition duration-300 hover:bg-blue-800 md:text-2xl dark:hover:bg-blue-500"
@@ -31,6 +31,10 @@ const lang = getLangFromUrl(Astro.url);
         class="rounded-3xl bg-gray-800 px-6 py-3 font-semibold uppercase text-white transition duration-300 hover:bg-gray-900 dark:hover:bg-gray-800"
         >Ver en GitHub</a
       > -->
+        <a
+        href="/es/docs/"
+        class="rounded-full bg-gray-800 px-6 py-3 font-semibold uppercase text-white transition duration-300 hover:bg-gray-900 dark:hover:bg-gray-800"
+        >Documentación</a>
       </div>
     </section>
     <footer class="absolute bottom-0 left-0 right-0 pb-2 text-center text-sm text-gray-600 dark:text-gray-400">
