--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Layout from '../layouts/Layout.astro';
         You no longer need to use your phone to authenticate. This extension provides two-factor authentication (2FA)
         verification codes directly in your browser.
       </p>
-      <div class="mt-2 flex items-center justify-center gap-4 md:mt-4">
+      <div class="mt-2 flex flex-col items-center justify-center gap-9 md:mt-4">
         <a
           href="https://chromewebstore.google.com/detail/2fa-authenticator/pnnmjhghimefjdmdilmlhnojccjgpgeh"
           class="rounded-full bg-blue-500 px-7 py-3 text-xl font-semibold uppercase text-white transition duration-300 hover:bg-blue-800 md:text-2xl dark:hover:bg-blue-500"
@@ -28,6 +28,10 @@ import Layout from '../layouts/Layout.astro';
         class="rounded-3xl bg-gray-800 px-6 py-3 font-semibold uppercase text-white transition duration-300 hover:bg-gray-900 dark:hover:bg-gray-800"
         >Ver en GitHub</a
       > -->
+        <a
+        href="/docs/"
+        class="rounded-full bg-gray-800 px-6 py-3 font-semibold uppercase text-white transition duration-300 hover:bg-gray-900 dark:hover:bg-gray-800"
+        >Documentation</a>
       </div>
     </section>
     <footer class="absolute bottom-0 left-0 right-0 pb-2 text-center text-sm text-gray-600 dark:text-gray-400">
