Update documentation titles and descriptions for multiple languages

--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -33,7 +33,7 @@ const lang = getLangFromUrl(Astro.url);
       > -->
         <a
         href="/es/docs/"
-        class="rounded-full bg-gray-800 px-6 py-3 font-semibold uppercase text-white transition duration-300 hover:bg-gray-900 dark:hover:bg-gray-800"
+        class="rounded-full bg-gray-600 dark:bg-gray-800 px-6 py-3 font-semibold uppercase text-white transition duration-300 hover:bg-gray-700 dark:hover:bg-gray-900"
         >Documentación</a>
       </div>
     </section>
