feat: Update documentation links to include language prefix

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ import Layout from '../layouts/Layout.astro';
         >Ver en GitHub</a
       > -->
         <a
-        href="/docs/"
+        href="/en/docs/"
         class="rounded-full bg-gray-600 dark:bg-gray-800 px-6 py-3 font-semibold uppercase text-white transition duration-300 hover:bg-gray-700 dark:hover:bg-gray-900"
         >Documentation</a>
       </div>
