--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import { ViewTransitions } from 'astro:transitions';
 import { getLangFromUrl } from '../i18n/utils';
+import config from '../../astro.config.mjs';
 
 import Body from '../components/Body.astro';
 
@@ -8,6 +9,8 @@ interface Props {
   title: string;
   center?: boolean;
 }
+
+const site = config.site;
 
 const { title, center } = Astro.props;
 const lang = getLangFromUrl(Astro.url);
@@ -21,6 +24,22 @@ const lang = getLangFromUrl(Astro.url);
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/favicon.ico" />
     <title>{title}</title>
+
+    <link rel="sitemap" href="/sitemap-index.xml" />
+
+    <meta property="og:image" content=`${site}/img/promotion-small.png` />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="440" />
+    <meta property="og:image:height" content="280" />
+    <meta property="og:image:alt" content="logo" />
+    <meta property="og:title" content="2FA Authenticator" />
+    <meta property="og:description" content="2FA Authenticator Extension" />
+    <meta property="og:url" content={site} />
+    <meta property="og:site_name" content="2FA Authenticator Extension" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="es_CL" />
+
     <ViewTransitions />
   </head>
   <Body center={center}>
