--- a/src/pages/es/account.astro
+++ b/src/pages/es/account.astro
@@ -17,8 +17,8 @@ import Layout from '@/layouts/Layout.astro';
   <div class="mx-auto flex max-w-4xl flex-col gap-6 px-8 pb-8">
     <h1 class="text-3xl font-bold text-gray-700 md:text-5xl">2FA Authenticator</h1>
     <p class="text-lg md:text-xl">
-      This window will close automatically...
-      <!-- <span class="text-gray-600 dark:text-gray-400"> Otherwise, you can close it manually.</span> -->
+      Esta ventana se cerrará automáticamente...
+      <!-- <span class="text-gray-600 dark:text-gray-400"> De lo contrario, puedes cerrarla manualmente.</span> -->
     </p>
   </div>
 </Layout>
