--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
 import { ViewTransitions } from 'astro:transitions';
-import { getLangFromUrl } from '../i18n/utils';
+import { getLangFromUrl } from '@/i18n/utils';
 
-import Body from '../components/Body.astro';
+import Body from '@/components/Body.astro';
 
 interface Props {
   title: string;
