--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const lang = getLangFromUrl(Astro.url);
 
     <link rel="sitemap" href="/sitemap-index.xml" />
 
-    <meta property="og:image" content="https://2fa-authenticator.cl/img/promotion-small.png" />
+    <meta property="og:image" content="https://2fa-authenticator.cl/img/promotion-small.webp" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="440" />
     <meta property="og:image:height" content="280" />
