--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Layout from '@/layouts/Layout.astro';
     <section class="mb-20 flex flex-col gap-8">
       <div class="text-center">
         <div class="flex items-center justify-center gap-4">
-          <img src="/img/icon-128.png" alt="Logo" class="h-16 w-16 md:h-24 md:w-24" />
+          <img src="/img/icon-128.webp" alt="Logo" class="h-16 w-16 md:h-24 md:w-24" />
           <span class="text-6xl font-bold text-gray-700 md:text-7xl dark:text-zinc-200">2FA</span>
         </div>
         <span class="mt-2 text-5xl font-bold text-gray-700 md:text-7xl dark:text-zinc-200">Authenticator</span>
